--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <DOCTYPE html>
 <html>
   <head>
+    <style>              
+      body {
+ background-color: red ; 
+}
+
+
+
+#Crediting-list {
+                  background-color: blue ;
+              }
+  
+
+  h1 {color: rgb(13, 83, 222);}  
+        
+  body {background-color: rgb(200, 275, 238);}
+            
+  </style>
   </head>
   
 <body>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTr2BJ1rYWF6Nx6CKmlSebZm_syJ2_-nwPKYA&usqp=CAU" style="width:100%;">
+<div class=centered">chemistry</div>
+<div><p><marquee>By khalid Alsirafy Year.10<marquee></p></div>
+<p>Hi,this website got all websites links made by the year 7 for a specific assignment</p>
+<ul>
+    <li><a href="./Elements/Aluminium.html">Aluminium</a></li> <br>
+    <li><a href="./element/Gold.html">GOLD</a></li> <br>
+</ul>
 </body>
 </html>
